fix:updated responsive sidebar chat buttons,fixed the gap for each items

--- a/assets/css/dashboarad.css
+++ b/assets/css/dashboarad.css
@@ -270,18 +270,26 @@ body {
   padding: 32px 28px;
 }
 
+.chat-buttons-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
 .new-chat-button {
-  margin-top: 40px;
+  margin-top: 30px;
   display: flex;
   border-radius: 94px;
   border: 1px solid #fff;
   background: #081839;
   display: inline-flex;
-  padding: 12px 24px;
+  padding: 8px 16px;
   justify-content: center;
   align-items: center;
-  gap: 12px;
+  gap: 8px;
   flex-shrink: 0;
+  height: 40px !important;
+  font-size: 14px;
 }
 
 .dashboard-chat-history-title {
@@ -328,7 +336,8 @@ body {
   white-space: initial;
   text-wrap: nowrap;
 }
-.dashboard-chat-history-item-title-main-wrapper{
+
+.dashboard-chat-history-item-title-main-wrapper {
   display: flex;
   align-items: center;
   gap: 12px;
@@ -365,6 +374,30 @@ body {
   z-index: 20;
   transform: translateY(-30%);
 }
+
+.dashboard-chat-item-option-wrapper-sm {
+  position: absolute;
+  padding: 16px 24px;
+  right: 32px;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+  top: 50%;
+  transform: translateY(0%);
+  border-radius: 11px;
+  background: #fff;
+  box-shadow: 0px 6px 16px 0px rgba(0, 0, 0, 0.12);
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  z-index: -20;
+}
+
+.dashboard-chat-item-option-wrapper-sm.active {
+  transform: translateY(-10%);
+  opacity: 100;
+  z-index: 20;
+}
+
 
 .dashboard-chat-item-option-item {
   display: flex;
@@ -416,19 +449,21 @@ body {
   border-radius: 8px;
   cursor: pointer;
 }
-.dashboard-sidebar-manage-item:hover{
+
+.dashboard-sidebar-manage-item:hover {
   background: #172b4d;
 }
+
 .dashboard-sidebar-manage-item.active {
   border-radius: 8px;
   background: var(--30-dark-neutrals-04, #172b4d);
 }
 
-.dashboard-sidebar-manage-item.files {
+/* .dashboard-sidebar-manage-item.files {
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
+} */
 
 .space-y-2>*+* {
   margin-top: 0.5rem;
@@ -842,6 +877,17 @@ body {
 /* chat history page */
 
 /* subscription */
+.view-subscription-history-button {
+  margin-left: 40px;
+}
+
+.view-subscription-history-title {
+  font-size: 18px;
+  color: var(--primary--color);
+  font-weight: 500;
+  text-decoration: underline;
+}
+
 .subscription-card {
   color: #141414;
   background: #fff;
@@ -887,6 +933,16 @@ body {
   transition: all 0.5s ease-in-out;
 }
 
+.subscription-card-button.current-plan {
+  background: var(--primary--color);
+  color: white;
+}
+
+.subscription-card-button.current-plan svg path {
+  transition: all 0.5s ease-in-out;
+  stroke: #fff;
+}
+
 .subscription-card-button svg path {
   transition: all 0.5s ease-in-out;
 }
@@ -896,8 +952,17 @@ body {
   color: #fff;
 }
 
+.subscription-card-button.current-plan:hover {
+  background: #fff;
+  color: var(--primary--color);
+}
+
 .subscription-card-button:hover svg path {
   stroke: #fff;
+}
+
+.subscription-card-button.current-plan:hover svg path {
+  stroke: var(--primary--color);
 }
 
 .subscription-card-1 {
@@ -1867,6 +1932,7 @@ body {
   position: fixed;
   top: 20px;
   left: 50%;
+  transform: translate(-50%);
   background-color: #333;
   color: white;
   padding: 12px 24px;
